ELIMINACIÓN DE VARIABLES SIN USO

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -4,19 +4,15 @@
 /* COLORES */
 
 //Paleta 1 (claros)
-$white:#FFF;
-$snow:#FAFAFA;
-$quick-silver:#A0A0A0;
+$white:#FFF;    //BG Y TEXTO
+$snow:#FAFAFA;  //BG
 
 //Paleta 2 (rojos)
-$jelly-bean:#E56353;
-$salmon:#E97F72;
-$pastel-pink:#F0A9A1;
+$jelly-bean:#E56353;    //BG
 
 //Paleta 3 (oscuros)
-$granite-gray:#686963;
-$taupe-gray:#91918D;
-$gray:#BABAB8;
+$granite-gray:#686963;  //BG Y TEXTO
+$taupe-gray:#91918D;    //BG
 
 
 /* TIPOGRAFÍAS */
