asignación de variables adicionales

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -17,6 +17,8 @@ $taupe-gray:#91918D;    //BG
 
 /* TIPOGRAFÍAS */
 
+$font-family:'Raleway', sans-serif;
+
 //Typefaces
 $text-bold:700;
 $text-regular:400;
