--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -13,7 +13,7 @@ $jelly-bean:#E56353;    //BG
 //Paleta 3 (oscuros)
 $granite-gray:#686963;  //BG Y TEXTO
 $taupe-gray:#91918D;    //BG
-
+$gray:#BABABA;
 
 /* TIPOGRAFÍAS */
 
