--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -6,7 +6,7 @@
     border-width: 1px;
     border-color: $granite-gray;
     &:hover{
-        background-color: $gray;
+        background-color: $granite-gray;
         color: $white;
     }
 }
