--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header{
-    .header_navbar{
+    &_navbar{
         background-color: $white;
         img{
             margin:1rem 0 0 7rem;
@@ -7,7 +7,7 @@
             vertical-align: middle;
         }
     }
-    .header_titulo{
+    &_titulo{
         height: $x-large*10;
         margin: auto 0;
         h1{
